// https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_DATABASE_URL")
}

/// Користувач (під майбутню реєстрацію / auth)
model User {
  id           String   @id @default(cuid())
  email        String   @unique
  name         String?
  passwordHash String
  /// Публічний опис / «про себе»
  bio          String?
  phone        String?
  city         String?
  /// Шлях від кореня сайту, напр. /uploads/avatars/{id}/avatar.jpg
  avatarUrl    String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  hostedEvents            Event[]                 @relation("EventHost")
  participations        EventParticipant[]
  eventMessages         EventMessage[]
  newsPosts             NewsPost[]
  fundraisers           Fundraiser[]
  eventPendingApprovals EventPendingApproval[]
}

/// Волонтерський захід
model Event {
  id          String   @id @default(cuid())
  title       String
  description String?
  /// Причина / мета зустрічі (окремо від загального опису)
  reason      String?
  startsAt    DateTime
  /// Якщо встановлено — захід завершено/архівовано (ручне або автоматичне архівування в UI/логіці).
  archivedAt  DateTime?
  location    String
  /// Ключ району Києва (holosiivskyi, pecherskyi, …) для фільтрації
  district    String?
  /// WGS84, для відображення на карті; обидва null — лише текстова адреса
  latitude    Float?
  longitude   Float?
  /// Максимум учасників (без організатора); null — без обмеження
  maxParticipants Int?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  hostId String
  host   User   @relation("EventHost", fields: [hostId], references: [id], onDelete: Cascade)

  participants EventParticipant[]
  messages     EventMessage[]
}

/// Заявка на захід, що потребує ручного схвалення адміном (збій AI або неоднозначна відповідь моделі)
model EventPendingApproval {
  id                 String   @id @default(cuid())
  /// "create" | "edit"
  kind               String
  /// Для kind=edit — id існуючого заходу
  targetEventId      String?
  title              String
  description        String?
  reason             String?
  startsAt           DateTime
  location           String
  latitude           Float?
  longitude          Float?
  maxParticipants    Int?
  district           String?
  hostId             String
  host               User     @relation(fields: [hostId], references: [id], onDelete: Cascade)
  /// "ambiguous" | "service_error"
  source             String
  /// Для service_error: missing_key | timeout | api | parse
  serviceErrorReason String?

  createdAt DateTime @default(now())

  @@index([hostId])
  @@index([createdAt])
}

/// Повідомлення в чаті заходу (видно лише учасникам та організатору на рівні додатку)
model EventMessage {
  id        String   @id @default(cuid())
  body      String
  createdAt DateTime @default(now())

  eventId String
  event   Event @relation(fields: [eventId], references: [id], onDelete: Cascade)

  userId String
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([eventId, createdAt])
}

/// Учасник заходу (унікальна пара event + user)
model EventParticipant {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())

  eventId String
  event   Event  @relation(fields: [eventId], references: [id], onDelete: Cascade)

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([eventId, userId])
}

/// Новина / пост фонду
model NewsPost {
  id            String   @id @default(cuid())
  title         String
  slug          String   @unique
  excerpt       String?
  body          String
  coverImageUrl String?
  gallery       Json?
  publishedAt   DateTime?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  authorId String
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([publishedAt])
}

/// Збір коштів / кампанія
model Fundraiser {
  id            String   @id @default(cuid())
  title         String
  tag           String?
  description   String
  goalAmount    Int
  raisedAmount  Int      @default(0)
  coverImageUrl String?
  gallery       Json?
  /// Дата завершення збору (для відображення «днів до завершення»)
  endsAt        DateTime?
  publishedAt   DateTime?
  archivedAt    DateTime?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  authorId String
  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)

  reports FundraiserReport[]

  @@index([publishedAt])
  @@index([archivedAt])
}

/// Запис звітності збору (витрати / надходження)
model FundraiserReport {
  id           String   @id @default(cuid())
  occurredAt   DateTime
  description  String
  /// Сума в гривнях; від’ємна — витрата, додатна — надходження
  amount       Int
  createdAt    DateTime @default(now())

  fundraiserId String
  fundraiser   Fundraiser @relation(fields: [fundraiserId], references: [id], onDelete: Cascade)

  @@index([fundraiserId, occurredAt])
}

/// Повідомлення з форми зворотного зв’язку (сторінка «Контакти»)
model ContactFeedback {
  id        String   @id @default(cuid())
  name      String?
  email     String?
  message   String
  createdAt DateTime @default(now())

  @@index([createdAt])
}
